# DAM_M7

./: README.md
DAM_M7_UF2_PAC2/help_files/: configuracion.html  index.html  instalacion.html  uso.html
WHATSAPP/: style.css  wasap.html
achus/Anima/: global.css  index.html
achus/Anima/src/: index.jsx
achus/Anima/src/screens/Frame/: Frame.jsx  style.css
achus/jesus/: html.html
dam_m7_uf2_pac4/: dam_m7_uf2_pac4.sln
dam_m7_uf2_pac4/dam_m7_uf2_pac4/: CMakeLists.txt  cardgame.cpp  cardgame.h  dam_m7_uf2_pac4.vcxproj  dam_m7_uf2_pac4.vcxproj.filters  test_cardgame.cpp
dam_m7_uf2_pac4/dam_m7_uf2_pac4/x64/Debug/: dam_m7_uf2_pac4.exe.recipe  dam_m7_uf2_pac4.ilk  vc143.idb
dam_m7_uf2_pac4/dam_m7_uf2_pac4/x64/Debug/dam_m7_uf2_pac4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  dam_m7_uf2_pac4.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
m7-unity/: Assembly-CSharp.csproj  GestorDeEstados-main.sln
m7-unity/Assets/Resources/: Ball.prefab
m7-unity/Assets/Scenes/: SampleScene.unity
m7-unity/Assets/Scripts/: AlertState.cs  AttackState.cs  Bullet.cs  CubeMovement.cs  EnemyAI.cs  IenemyState.cs  PatrolState.cs  PlayerAttack.cs  RunState.cs
m7_uf2_apmp/: MakeC.txt.txt  m7_uf2_apmp.sln
m7_uf2_apmp/m7_uf2_apmp/: log.txt  m7_uf2_apmp.vcxproj  main.cpp
m7_uf2_apmp/m7_uf2_apmp/x64/Debug/: m7_uf2_apmp.exe.recipe  m7_uf2_apmp.ilk  vc143.idb
m7_uf2_apmp/m7_uf2_apmp/x64/Debug/m7_uf2_apmp.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
practica_menú/: carta.xml  index.html  script.js  styles.css
